// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles reason LIFF: reply request update success, multiple reply requests 1`] = `
Object {
  "data": Object {
    "selectedArticleId": "article-id",
    "sessionId": 1497994017447,
  },
  "event": Object {
    "input": "💁 My reason is:
My reason",
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "replies": Array [
    Object {
      "altText": "Thanks for the info you provided.",
      "contents": Object {
        "contents": Array [
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "Your friends may know the answer 🌟 Share your question to friends, maybe someone can help!",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "Share on LINE",
                    "type": "uri",
                    "uri": "line://msg/text/?Please%20help%20me%20verify%20if%20this%20is%20true%3A%20https%3A%2F%2Fcofacts.hacktabl.org%2Farticle%2Farticle-id",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
                Object {
                  "action": Object {
                    "label": "Share on Facebook",
                    "type": "uri",
                    "uri": "https://www.facebook.com/dialog/share?openExternalBrowser=1&app_id=719656818195367&display=popup&hashtag=%23ReportedToCofacts&href=https%3A%2F%2Fcofacts.hacktabl.org%2Farticle%2Farticle-id",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "Thanks for the info you provided.",
                  "type": "text",
                  "wrap": true,
                },
                Object {
                  "text": "There is 1 user also waiting for clarification.",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "See reported message",
                    "type": "uri",
                    "uri": "https://cofacts.hacktabl.org/article/article-id",
                  },
                  "color": "#333333",
                  "style": "primary",
                  "type": "button",
                },
                Object {
                  "action": Object {
                    "label": "Rewrite my reason",
                    "type": "uri",
                    "uri": "https://liff.line.me/1563196602-X6mLdDkW/liff/index.html?p=reason&token=eyJhbGciOiJIUzI1NiJ9.eyJzZXNzaW9uSWQiOjE0OTc5OTQwMTc0NDcsInN1YiI6IlVjNzZkOGFlOWNjZDFhZGE0ZjA2YzRlMTUxNWQ0NjQ2NiIsImV4cCI6MTU3NzkyMzIwMH0.V4OTSDA0wDDrlc665JRyjkC0Ux3RFqUM-RN_VNKNCcs",
                  },
                  "color": "#333333",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`handles reason LIFF: reply request update success, only 1 reply request 1`] = `
Object {
  "data": Object {
    "selectedArticleId": "article-id",
    "sessionId": 1497994017447,
  },
  "event": Object {
    "input": "💁 My reason is:
My reason",
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "replies": Array [
    Object {
      "altText": "Thanks for the info you provided.",
      "contents": Object {
        "contents": Array [
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "Your friends may know the answer 🌟 Share your question to friends, maybe someone can help!",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "Share on LINE",
                    "type": "uri",
                    "uri": "line://msg/text/?Please%20help%20me%20verify%20if%20this%20is%20true%3A%20https%3A%2F%2Fcofacts.hacktabl.org%2Farticle%2Farticle-id",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
                Object {
                  "action": Object {
                    "label": "Share on Facebook",
                    "type": "uri",
                    "uri": "https://www.facebook.com/dialog/share?openExternalBrowser=1&app_id=719656818195367&display=popup&hashtag=%23ReportedToCofacts&href=https%3A%2F%2Fcofacts.hacktabl.org%2Farticle%2Farticle-id",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "Thanks for the info you provided.",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "See reported message",
                    "type": "uri",
                    "uri": "https://cofacts.hacktabl.org/article/article-id",
                  },
                  "color": "#333333",
                  "style": "primary",
                  "type": "button",
                },
                Object {
                  "action": Object {
                    "label": "Rewrite my reason",
                    "type": "uri",
                    "uri": "https://liff.line.me/1563196602-X6mLdDkW/liff/index.html?p=reason&token=eyJhbGciOiJIUzI1NiJ9.eyJzZXNzaW9uSWQiOjE0OTc5OTQwMTc0NDcsInN1YiI6IlVjNzZkOGFlOWNjZDFhZGE0ZjA2YzRlMTUxNWQ0NjQ2NiIsImV4cCI6MTU3NzkyMzIwMH0.V4OTSDA0wDDrlc665JRyjkC0Ux3RFqUM-RN_VNKNCcs",
                  },
                  "color": "#333333",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`records article source 1`] = `
Object {
  "data": Object {
    "selectedArticleId": "selected-article-id",
  },
  "event": Object {
    "input": "ℹ️ I got the message from:
A LINE group",
  },
  "isSkipUser": undefined,
  "issuedAt": undefined,
  "replies": Array [
    Object {
      "altText": "Thanks for the info.",
      "contents": Object {
        "contents": Array [
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "Thanks for the info.",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "See reported message",
                    "type": "uri",
                    "uri": "https://cofacts.hacktabl.org/article/selected-article-id",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
                Object {
                  "action": Object {
                    "label": "Provide more info",
                    "type": "uri",
                    "uri": "https://liff.line.me/1563196602-X6mLdDkW/liff/index.html?p=reason&token=eyJhbGciOiJIUzI1NiJ9.eyJleHAiOjE1Nzc5MjMyMDB9.zfrE2uvmsu7mPH23-TZ5L_mfjiNEeiX-x5Md4Lvsk7I",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "Your friends may know the answer 🌟 Share your question to friends, maybe someone can help!",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "Share on LINE",
                    "type": "uri",
                    "uri": "line://msg/text/?Please%20help%20me%20verify%20if%20this%20is%20true%3A%20https%3A%2F%2Fcofacts.hacktabl.org%2Farticle%2Fselected-article-id",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
                Object {
                  "action": Object {
                    "label": "Share on Facebook",
                    "type": "uri",
                    "uri": "https://www.facebook.com/dialog/share?openExternalBrowser=1&app_id=719656818195367&display=popup&hashtag=%23ReportedToCofacts&href=https%3A%2F%2Fcofacts.hacktabl.org%2Farticle%2Fselected-article-id",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
  "userId": undefined,
}
`;

exports[`should ask user to turn on notification settings if they did not turn it on 1`] = `
Array [
  Object {
    "body": Object {
      "contents": Array [
        Object {
          "text": "Thanks for the info.",
          "type": "text",
          "wrap": true,
        },
      ],
      "layout": "vertical",
      "type": "box",
    },
    "footer": Object {
      "contents": Array [
        Object {
          "action": Object {
            "label": "See reported message",
            "type": "uri",
            "uri": "https://cofacts.hacktabl.org/article/selected-article-id",
          },
          "color": "#ffb600",
          "style": "primary",
          "type": "button",
        },
        Object {
          "action": Object {
            "label": "Provide more info",
            "type": "uri",
            "uri": "https://liff.line.me/1563196602-X6mLdDkW/liff/index.html?p=reason&token=eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJtb2NrVXNlciIsImV4cCI6MTU3NzkyMzIwMH0.fuwytwBav1G6fS_eJh3D5Osmfnb8CctvjkdKJm4hwSQ",
          },
          "color": "#ffb600",
          "style": "primary",
          "type": "button",
        },
      ],
      "layout": "vertical",
      "spacing": "sm",
      "type": "box",
    },
    "type": "bubble",
  },
  Object {
    "body": Object {
      "contents": Array [
        Object {
          "text": "You can turn on notification if you want Cofacts to notify you when someone replies this message.",
          "type": "text",
          "wrap": true,
        },
      ],
      "layout": "vertical",
      "type": "box",
    },
    "footer": Object {
      "contents": Array [
        Object {
          "action": Object {
            "label": "Go to settings",
            "type": "uri",
            "uri": "https://liff.line.me/1563196602-X6mLdDkW/liff/index.html?p=setting&utm_source=rumors-line-bot&utm_medium=reply-request",
          },
          "color": "#00B172",
          "style": "primary",
          "type": "button",
        },
      ],
      "layout": "vertical",
      "spacing": "sm",
      "type": "box",
    },
    "header": Object {
      "contents": Array [
        Object {
          "text": "🔔  Receive updates",
          "type": "text",
          "wrap": true,
        },
      ],
      "layout": "vertical",
      "paddingBottom": "none",
      "type": "box",
    },
    "type": "bubble",
  },
  Object {
    "body": Object {
      "contents": Array [
        Object {
          "text": "Your friends may know the answer 🌟 Share your question to friends, maybe someone can help!",
          "type": "text",
          "wrap": true,
        },
      ],
      "layout": "vertical",
      "type": "box",
    },
    "footer": Object {
      "contents": Array [
        Object {
          "action": Object {
            "label": "Share on LINE",
            "type": "uri",
            "uri": "line://msg/text/?Please%20help%20me%20verify%20if%20this%20is%20true%3A%20https%3A%2F%2Fcofacts.hacktabl.org%2Farticle%2Fselected-article-id",
          },
          "color": "#ffb600",
          "style": "primary",
          "type": "button",
        },
        Object {
          "action": Object {
            "label": "Share on Facebook",
            "type": "uri",
            "uri": "https://www.facebook.com/dialog/share?openExternalBrowser=1&app_id=719656818195367&display=popup&hashtag=%23ReportedToCofacts&href=https%3A%2F%2Fcofacts.hacktabl.org%2Farticle%2Fselected-article-id",
          },
          "color": "#ffb600",
          "style": "primary",
          "type": "button",
        },
      ],
      "layout": "vertical",
      "spacing": "sm",
      "type": "box",
    },
    "type": "bubble",
  },
]
`;

exports[`should ask user to turn on notification settings if they did not turn it on 2`] = `
Array [
  Object {
    "body": Object {
      "contents": Array [
        Object {
          "text": "You can turn on notification if you want Cofacts to notify you when someone replies this message.",
          "type": "text",
          "wrap": true,
        },
      ],
      "layout": "vertical",
      "type": "box",
    },
    "footer": Object {
      "contents": Array [
        Object {
          "action": Object {
            "label": "Go to settings",
            "type": "uri",
            "uri": "https://liff.line.me/1563196602-X6mLdDkW/liff/index.html?p=setting&utm_source=rumors-line-bot&utm_medium=reply-request",
          },
          "color": "#00B172",
          "style": "primary",
          "type": "button",
        },
      ],
      "layout": "vertical",
      "spacing": "sm",
      "type": "box",
    },
    "header": Object {
      "contents": Array [
        Object {
          "text": "🔔  Receive updates",
          "type": "text",
          "wrap": true,
        },
      ],
      "layout": "vertical",
      "paddingBottom": "none",
      "type": "box",
    },
    "type": "bubble",
  },
  Object {
    "body": Object {
      "contents": Array [
        Object {
          "text": "Your friends may know the answer 🌟 Share your question to friends, maybe someone can help!",
          "type": "text",
          "wrap": true,
        },
      ],
      "layout": "vertical",
      "type": "box",
    },
    "footer": Object {
      "contents": Array [
        Object {
          "action": Object {
            "label": "Share on LINE",
            "type": "uri",
            "uri": "line://msg/text/?Please%20help%20me%20verify%20if%20this%20is%20true%3A%20https%3A%2F%2Fcofacts.hacktabl.org%2Farticle%2Farticle-id",
          },
          "color": "#ffb600",
          "style": "primary",
          "type": "button",
        },
        Object {
          "action": Object {
            "label": "Share on Facebook",
            "type": "uri",
            "uri": "https://www.facebook.com/dialog/share?openExternalBrowser=1&app_id=719656818195367&display=popup&hashtag=%23ReportedToCofacts&href=https%3A%2F%2Fcofacts.hacktabl.org%2Farticle%2Farticle-id",
          },
          "color": "#ffb600",
          "style": "primary",
          "type": "button",
        },
      ],
      "layout": "vertical",
      "spacing": "sm",
      "type": "box",
    },
    "type": "bubble",
  },
  Object {
    "body": Object {
      "contents": Array [
        Object {
          "text": "Thanks for the info you provided.",
          "type": "text",
          "wrap": true,
        },
      ],
      "layout": "vertical",
      "type": "box",
    },
    "footer": Object {
      "contents": Array [
        Object {
          "action": Object {
            "label": "See reported message",
            "type": "uri",
            "uri": "https://cofacts.hacktabl.org/article/article-id",
          },
          "color": "#333333",
          "style": "primary",
          "type": "button",
        },
        Object {
          "action": Object {
            "label": "Rewrite my reason",
            "type": "uri",
            "uri": "https://liff.line.me/1563196602-X6mLdDkW/liff/index.html?p=reason&token=eyJhbGciOiJIUzI1NiJ9.eyJzZXNzaW9uSWQiOjE0OTc5OTQwMTc0NDcsInN1YiI6Im1vY2tVc2VyIiwiZXhwIjoxNTc3OTIzMjAwfQ.7ZPl4w0pZkgppdZ5f7o87aowBCRtNZ6T9HPKV08B360",
          },
          "color": "#333333",
          "style": "primary",
          "type": "button",
        },
      ],
      "layout": "vertical",
      "spacing": "sm",
      "type": "box",
    },
    "type": "bubble",
  },
]
`;
